<resources>
    <string name="app_name">Movie Tails</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video_ua_text">This video is not available at the moment\n Please try again later</string>
    <string name="movie_title">Harry Potter &amp; the Deathly Hallows Part - I</string>
    <string name="movie_genre">Thriller | Fantasy</string>
    <string name="movie_ov_text">After Voldemort takes over the Ministry of Magic,
        Harry, Ron and Hermione are forced into hiding.
        They try to decipher the clues left to them by
        Dumbledore to find and destroy Voldemorts Horcruxes.</string>
    <string name="est">Explore Similar Titles</string>
    <string name="duration">Duration</string>
    <string name="country">Country</string>
    <string name="year">Year</string>
    <string name="movie_img">movie_img</string>
    <string name="details_movie_title">Harry Potter &amp; the Philosophers Stone</string>
    <string name="app_background">app background</string>
    <string name="hi_what_s_next">Hi, what\'s next ?</string>
    <string name="discover">Discover</string>
    <string name="top_trending">Top Trending</string>
    <string name="small_list_movie_img">small list movie img</string>
    <string name="sl_movie_title">The Conjuring 2</string>
    <string name="sl_movie_title_1">Harry Potter &amp; the Prisoner of Azkaban</string>
    <string name="top_rated_movies">top rated movies</string>
    <string name="upcoming_movies">upcoming movies</string>
    <string name="now_playing">Now Playing</string>
    <string name="list_text_here">List Text Here</string>
    <string name="movie_title_here">Harry Potter &amp; the Deathly Hallows Part - II</string>
    <string name="image">image</string>
    <string name="app_preferences">App Preferences</string>
</resources>