<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.dsckiet.movietails.ui.home.fragment.HomeFragment">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="-4dp"
                android:background="@drawable/ic_path_606"
                android:contentDescription="@string/app_background" />

            <ImageView
                android:id="@+id/home_dark_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-26dp"
                android:layout_marginEnd="-30dp"
                android:layout_marginRight="-30dp"
                android:background="@drawable/dark_mode"
                android:contentDescription="@string/app_background" />

            <TextView
                android:id="@+id/home_header"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:padding="32dp"
                android:text="@string/hi_what_s_next"
                android:textColor="#fff"
                android:textSize="32sp" />

            <androidx.appcompat.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/home_header"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:background="#D3B7E3"
                app:queryHint="Search for movies, people &amp; more" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="190dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingLeft="24dp"
                    android:paddingTop="32dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="6dp"
                    android:text="@string/discover"
                    android:textColor="@color/detailsLargeText"
                    android:textSize="24sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="36dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/upcoming_movies"
                        android:src="@drawable/img_na" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingLeft="24dp"
                    android:paddingTop="16dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="6dp"
                    android:text="@string/now_playing"
                    android:textColor="@color/detailsLargeText"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_now_playing_rv"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:layout_margin="16dp"
                    tools:listitem="@layout/item_home_now_playing"
                    tools:itemCount="4"
                    android:background="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingLeft="24dp"
                    android:paddingTop="16dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="6dp"
                    android:text="@string/top_trending"
                    android:textColor="@color/detailsLargeText"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_main_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:padding="12dp"
                    tools:listitem="@layout/item_home_top_trending" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>