<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.dsckiet.movietails.ui.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:cardMaxElevation="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:padding="4sp"
                    android:textAlignment="center"
                    android:text="@string/video_ua_text"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="4dp"
                android:text="@string/movie_title"
                android:textAlignment="center"
                android:textColor="@color/detailsLargeText"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="4dp"
                android:text="@string/movie_genre"
                android:textAlignment="center"
                android:textColor="@color/detailsSmallText"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:numStars="5"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_gravity="center_horizontal"
                android:rating="4.0"
                android:progressTint="@color/ratingStar"
                android:stepSize="0.5" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2009"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/detailsLargeText"
                        android:fontFamily="@font/roboto_medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:layout_gravity="center_horizontal"
                        android:textSize="16sp"
                        android:textColor="@color/detailsSmallText"
                        android:fontFamily="@font/roboto_medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="USA"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/detailsLargeText"
                        android:fontFamily="@font/roboto_medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:layout_gravity="center_horizontal"
                        android:textSize="16sp"
                        android:textColor="@color/detailsSmallText"
                        android:fontFamily="@font/roboto_medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="134 min"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/detailsLargeText"
                        android:fontFamily="@font/roboto_medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:layout_gravity="center_horizontal"
                        android:textSize="16sp"
                        android:textColor="@color/detailsSmallText"
                        android:fontFamily="@font/roboto_medium" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="280dp"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/slimLineColor" />

            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:padding="4dp"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat"
                android:text="@string/movie_ov_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/est"
                android:textColor="@color/detailsLargeText"
                android:textSize="16sp"
                android:padding="4dp"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/details_rc_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                tools:listitem="@layout/item_home_top_trending" />
        </LinearLayout>
    </ScrollView>
</layout>