<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardMaxElevation="8dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="145dp"
                android:layout_height="190dp"
                android:padding="4dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image"
                    android:src="@drawable/img_na" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="4dp"
                    android:text="@string/movie_title_here"
                    android:textColor="@color/detailsLargeText"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:padding="4dp"
                    android:text="@string/movie_genre"
                    android:textColor="@color/detailsSmallText"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="match_parent"
                                android:padding="2dp"
                                android:src="@drawable/trend_up" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="83%"
                                android:padding="2dp"
                                android:textSize="20sp"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/detailsLargeText"
                                android:fontFamily="@font/roboto_medium" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Votes"
                            android:layout_gravity="center_horizontal"
                            android:textSize="16sp"
                            android:textColor="@color/detailsSmallText"
                            android:fontFamily="@font/roboto" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:layout_marginLeft="60dp"
                        android:orientation="vertical"
                        android:layout_marginStart="60dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="match_parent"
                                android:padding="2dp"
                                android:src="@drawable/star_icon" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="4.7"
                                android:padding="2dp"
                                android:textSize="20sp"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/detailsLargeText"
                                android:fontFamily="@font/roboto_medium" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rating"
                            android:layout_gravity="center_horizontal"
                            android:textSize="16sp"
                            android:textColor="@color/detailsSmallText"
                            android:fontFamily="@font/roboto" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>